# reasoning

./: .gitignore  Fine_Tuning_Gemma_3_on_Your_GPU.py  Gemma3_1b_Thinking_on_MAC.ipynb  README.md  batch_inference.py  inference.py  intro_gemini_2_0_flash_thinking_mode.ipynb  new_gemma_training.py  optimized_gemma_training.py  project_setup.sh  pyproject.toml  reasoning_dataset.py  requirements.txt  reward_config.py  rewards.py  test_model_performance.py  yek.yaml
RLVR/: explore_webinstruct_dataset.py  train_webinstruct_verified.py
current-project-plans/: csv_logging_implementation.md  integration_plan.md  logging_consolidation_plan.md  synthetic_gsm8k_dataset_plan.md
src/datasets/: reasoning_dataset.py
src/inference/: inference.sh  test_model_performance.py
src/logging/: README.md  __init__.py  config.py  csv_logger.py  example.py  metrics.py  validation.py
src/logging/config/: default_logging_config.yaml  gemma_logging_config.yaml
src/logging/formatters/: __init__.py  json_formatter.py
src/logging/handlers/: __init__.py  csv_handler.py  tensorboard_handler.py
src/notebooks/: Fine_Tuning_Gemma_3_on_Your_GPU.ipynb  Gemma3_1b_Thinking_on_MAC.ipynb  HuggingFace_Course_Gemma3_(1B)_GRPO.ipynb  gemini_api_test1.ipynb
src/training/: Gemma3_1b_Thinking_on_MAC.py  enhanced_logging_callback.py  integration_examples.py  new_gemma_training.py  optimized_gemma_training.py  optimized_logging_callback.py  reward_config.py  rewards.py  wrapped_rewards.py
tests/: __init__.py  conftest.py  test_imports.py
