[tool.poetry]
name = "reasoning"
version = "0.1.0"
description = "Gemma3 Reasoning Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "inference", from = "src" },
    { include = "training", from = "src" },
    { include = "datasets", from = "src" },
    { include = "logging", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
nbconvert = "^7.13.1"
regex = "^2023.10.3"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"
bitsandbytes = "^0.42.0"
tensorboard = "*"
peft = {git = "https://github.com/huggingface/peft.git"}
transformers = {git = "https://github.com/huggingface/transformers.git", rev = "v4.49.0-Gemma-3"}
trl = {git = "https://github.com/huggingface/trl.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# Add this new section to exclude specific files or directories
exclude = [
    "__pypackages__",
    "src/DATA/",
    "src/api/prompts/topics_text.py",
    "src/api/prompts/tags_list.py",

    "src/api/prompts/tags_list_alt.py",
    "src/api/prompts/topics_text_alt.py",

    "src/api/additive_prompts.py",
    "src/api/additive_prompts_alt.py",

    "src/api/prompts/routing_prompt.py",
    "src/api/prompts/routing_prompt_alt.py",

    "**/*.ipynb"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D103",
    "D104",
    "D100",
    "D101",
    "N806",
    "N803",
    "E501",
    "D107",
    "D102",
    "D201",
    "D202",
    "D205",
    "B904",
    "B008",
    "E402",
]

[tool.ruff.per-file-ignores]
"**/*.ipynb" = ["E402"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "E712", # == for asserts
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
